[gd_scene load_steps=6 format=2]

[ext_resource path="res://scene/mini games/dragNdrop.gd" type="Script" id=1]
[ext_resource path="res://asset/minigames3/botol.png" type="Texture" id=2]
[ext_resource path="res://asset/UI/board.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 50.5, 58.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 52, 44 )

[node name="garbageObject" type="KinematicBody2D"]
position = Vector2( 168, 624 )
input_pickable = true
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Board" type="Sprite" parent="."]
position = Vector2( 0, 8 )
scale = Vector2( 0.414286, 0.414286 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8 )
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -8, 8.00006 )
scale = Vector2( 0.113389, 0.113389 )
texture = ExtResource( 2 )

[node name="detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detector"]
position = Vector2( 4, 4 )
shape = SubResource( 5 )

[connection signal="input_event" from="." to="." method="_on_garbageObject_input_event"]
[connection signal="area_entered" from="detector" to="." method="_on_detector_area_entered"]
[connection signal="area_exited" from="detector" to="." method="_on_detector_area_exited"]
